--- a/src/aura/FillInvoice/FillInvoice.cmp
+++ b/src/aura/FillInvoice/FillInvoice.cmp
@@ -1,5 +1,4 @@
-<aura:component description="FillInvoice" implements="force:lightningQuickActionWithoutHeader,
-                                        force:hasRecordId, force:hasSObjectName"
+<aura:component description="FillInvoice" implements="force:lightningQuickActionWithoutHeader,force:hasRecordId,force:hasSObjectName"
                 controller="FillInvoiceNumberController">
 
     <aura:attribute name="sObjectName" type="String"/>
