--- a/src/aura/GenerateReport/GenerateReport.cmp
+++ b/src/aura/GenerateReport/GenerateReport.cmp
@@ -1,10 +1,16 @@
 <aura:component description="GenerateReport" implements="force:lightningQuickActionWithoutHeader,
-                        force:hasRecordId, force:hasSObjectName">
-    
+                        force:hasRecordId, force:hasSObjectName" controller="GenerateReportController">
+
+    <aura:handler name="init" action="{!c.doInit}" value="{!this}"/>
+    <aura:attribute name="recordId" type="Id"/>
+    <aura:attribute name="types" type="List"/>
+
+    Generate Report Component
+    <aura:iteration items="{!v.types}" var="type">
         <div class="slds-text-heading_large">
-            <lightning:input type="radio" label="A" value="1"/>
-            <lightning:input type="radio" label="B" value="2"/>
-            <lightning:input type="radio" label="C" value="3"/>
+            <lightning:input type="radio" label="{!type}" value="{!type}"/>
         </div>
+    </aura:iteration>
+    <div align="right"><lightning:button label="Generate" variant="brand" onclick="{! c.generate }"/></div>
 
 </aura:component>
