--- a/src/aura/Main/Main.cmp
+++ b/src/aura/Main/Main.cmp
@@ -1,4 +1,5 @@
-<aura:component description="Main" implements="force:lightningQuickActionWithoutHeader,force:hasRecordId,force:hasSObjectName" controller="AccountController">
+<aura:component description="Main" implements="force:lightningQuickActionWithoutHeader,
+                force:hasRecordId,force:hasSObjectName" controller="AccountController">
 
     <aura:handler name="init" action="{!c.doInit}" value="{!this}"/>
     <aura:handler name="saved" event="c:invoiceSaved" action="{!c.changeShowGenerate}"/>
@@ -7,12 +8,14 @@
     <aura:attribute name="noError" type="boolean" default="true"/>
 
     <aura:if isTrue="{!v.noError}">
+
         <aura:if isTrue="{!v.hasNumber}">
             <c:GenerateReport recordId="{!v.recordId}"/>
             <aura:set attribute="else">
                 <c:FillInvoice recordId="{!v.recordId}" sObjectName="{!v.sObjectName}"/>
             </aura:set>
         </aura:if>
+
             <aura:set attribute="else">
                 <div class="slds-text-align--center">
                     <div class="slds-text-heading_medium">
